# tram-template

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  maketool.bat  maketool.ini  plugin.manifest  readme.md  resource.manifest  template.cfg
assets/: toilet.blend
data/: en.lang  lv.lang  material.list
data/animations/: toilet-lid-open-close.anim
data/models/: mongus.dymdl  mybestwork.dymdl  teapot.dymdl  toilet.dymdl
data/sprites/: font_text_bold.spr  poland.spr
data/worldcells/: planeworld.cell
scripts/: init.lua
src/: main.cpp
